[package]
name = "dalet"
version = "1.0.0-pre4"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "Dalet implementation in Rust"
repository = "https://github.com/txtdot/dalet"
homepage = "https://github.com/TxtDot/dalet/tree/main/libs/rust"
readme = "./README.md"
keywords = ["dalet"]
categories = ["compression", "compilers", "encoding"]

[dependencies]
bitvec = "1.0.1"
num_enum = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

[features]
default = ["types", "daletpack"]
types = []
daletpack = ["types"]
